Run Perfmonkey tests on http://test.inventus.com.tr

--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://test.inventus.com.tr","creator":"http://perfmonkey.com","rand":0.8992779715918005,"created_at":"2014-09-13T12:38:40.737Z"}
